add images to projects-cards

--- a/projects/_posts/2020-12-05-giftapes.md
+++ b/projects/_posts/2020-12-05-giftapes.md
@@ -2,7 +2,9 @@
 title: giftapes
 category: projects
 collaborators: Robert, Ondine, Jurek, Susan
-image:
+mockup: 'https://res.cloudinary.com/susanjsp/image/upload/v1610843460/portfolio/giftapes-mockup_e6nvqa.png'
+cover: 'https://res.cloudinary.com/susanjsp/image/upload/v1610842436/portfolio/giftapes-cover_lygfso.png'
+gif:
 github_link: "https://github.com/RobertK3000/giftapes"
 live_link: "http://giftapes.club"
 ---
