--- a/projects/_posts/2020-12-05-giftapes.md
+++ b/projects/_posts/2020-12-05-giftapes.md
@@ -2,8 +2,7 @@
 title: giftapes
 category: projects
 collaborators: Robert, Ondine, Jurek, Susan
-mockup: 'https://res.cloudinary.com/susanjsp/image/upload/v1610843460/portfolio/giftapes-mockup_e6nvqa.png'
-cover: 'https://res.cloudinary.com/susanjsp/image/upload/v1610842436/portfolio/giftapes-cover_lygfso.png'
+mockup: 'https://res.cloudinary.com/susanjsp/image/upload/v1611124186/portfolio/giftapes_jco9li.png'
 gif:
 github_link: "https://github.com/RobertK3000/giftapes"
 live_link: "http://giftapes.club"
@@ -13,6 +12,9 @@ This project was completed as a final project of my bootcamp. The original pitch
 
 ### Description
 Put the meaning back into sharing - curate fun "microsites" and share with friends. Choose between creating a mixtape, photo-story, a personal quiz or a curated list of interesting links and articles.
+
+### Technology
+Rails MVC, PostgreSQL, bootstrap, SaSS, JavaScript, heroku, AWS (Cloudinary)
 
 ### Project Goals
 - To create a space to share meaningful & personal digital gifts to close friends
