changed header font

--- a/projects/_posts/2020-12-05-giftapes.md
+++ b/projects/_posts/2020-12-05-giftapes.md
@@ -7,29 +7,22 @@ gif:
 github_link: "https://github.com/RobertK3000/giftapes"
 live_link: "http://giftapes.club"
 ---
-### Context
-This project was completed as a final project of my bootcamp. The original pitch idea was delivered by Rob, who wanted to create a curation website that is more meaningful than the sharing that's currently seen in traditional social media sites.
-
 ### Description
 Put the meaning back into sharing - curate fun "microsites" and share with friends. Choose between creating a mixtape, photo-story, a personal quiz or a curated list of interesting links and articles.
 
+### My Role
+Full-stack Developer. As a team, we brainstormed and worked through creating user stories, db schema and prototyping in figma together. From there, we were all assigned different sections of the website. Implementing and styling the photo-stories was my responsibility.
+
 ### Technology
-Rails MVC, PostgreSQL, bootstrap, SaSS, JavaScript, heroku, AWS (Cloudinary)
+Rails MVC, PostgreSQL, bootstrap, SaSS, JavaScript, GitHub & git version control, heroku, AWS (Cloudinary), integration with [GIPHY API](https:1//developers.giphy.com/) & [YouTube API](https://developers.google.com/youtube/v3).
 
 ### Project Goals
 - To create a space to share meaningful & personal digital gifts to close friends
 - To create something playful, with an amazing fun experience
 - To ensure that this gift would only be viewable to the person receiving, via a unique link
 
-### My Experience
-As this project was to be completed in under 2 weeks, we brainstormed and worked through creating user stories, db schema and prototyping in figma together. From there, we were all assigned different sections of the website. Implementing and styling the photo-stories was my responsibility.
-
 ### Work flow
 1. Brainstorming, creating user stories, database, routes and basic controllers
 2. Assigning each app feature a priority label - important, medium and low priority features
-3. Assigning the design & implementation of a specific gift to a group member
+3. Assigning the design & implementation of a specific gift to each group member
 4. Each morning we did a stand-up to discuss what was achieved yesterday, today's goals and to create an opportunity to discuss any difficult conversations so that we can support our team mates.
-
-### What I learnt
-This project was the first experience of creating an app with endless opportunities. We came up with amazing ideas in the initial stage of creating the app, but quickly learnt that most of the features were too complicated for our experience level, or would not be feasible in our time-frame. Although frustrating, this was a valuable lesson in teaching us how to work within constraints and still make the most out of the resources that we had available to us.
-
